--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root"></div>
-    <h1> Tanishq Sharma</h1>
+    <div id="root">
+        <h1>Not Rendered</h1>
+    </div>
+    
     <script type="module" src="./App.js"></script>
 
-    <h1> Hello World!</h1>
 </body>
 </html>
