--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HR26 WALE 🍽️</title>
+    <title>HR26 WALE 🍴</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/Dr9z3Tb/HR26-wale-w-bg-copy-logo.png"/>
     <link rel="stylesheet" href="./index.css">
 </head>
